updated pom & etc settings