@@ -154,9 +154,9 @@
             <version>2.1.7</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.5</version>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+            <version>2.11.0</version>
         </dependency>
     </dependencies>
 
@@ -204,7 +204,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
                 <configuration>
-                    <argLine>-Xms512m -Xmx5120g -XX:MaxPermSize=128m</argLine>
+                    <argLine>-Xms512m -Xmx5120g</argLine>
                     <argLine>-XX:+UseConcMarkSweepGC</argLine>
                 </configuration>
             </plugin>
